samples/_failures_safe/1761265859_afc4ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb3f2104.c: In function ‘main’:
./samples/SAFE/__tmp_cb3f2104.c:164:9: error: expected declaration or statement at end of input
  164 |         printf("Invalid start node\n");
      |         ^~~~~~
./samples/SAFE/__tmp_cb3f2104.c:164:9: error: expected declaration or statement at end of input
